# try-nest-poetry

./: README.md  untitled.code-workspace
.devcontainer/: devcontainer.json  postCreateCommand.bash
sample-project01/: README.md  pyproject.toml
sample-project01/sample_project01/nest/: __main__.py
sample-project01/tests/: test_nest.py
sample-project02/: README.md  pyproject.toml
