[tool.poetry]
name = "sample-project02"
version = "0.1.0"
description = ""
authors = ["TAKE Takashi <705098+take-takashi@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sample_project02", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
